fixes arrow alignment on sub menus

--- a/webapp/src/main/webapp/src/styles.less
+++ b/webapp/src/main/webapp/src/styles.less
@@ -457,6 +457,8 @@ body .select-menu-group {
   border-left-color: @gray-mid;
   margin-top: @padding-base-vertical;
   margin-right: -@padding-base-horizontal;
+  position: relative;
+  top: 2px;
 }
 
 .dropdown-submenu.pull-left {
